--- a/src/index.html
+++ b/src/index.html
@@ -31,9 +31,7 @@
 
 	<div class="container"></div>
 
-	<button class="btn-start" onclick="startGame()">
-		Start
-	</button>
+	<button class="btn-start" onclick="startGame()">Start</button>
 
 	<script type="text/javascript" src="js/main.js"></script>
 </body>
